# TigerVNC-Guacamole-Installer

./: .gitignore  README.md  SECURITY.md  bootstrap.sh  init.sh  pyproject.toml
.github/workflows/: test.yml
docs/: SUPPORT_MATRIX.md
schemas/: config-v1.schema.json
src/urd_installer/: __init__.py  __main__.py  cli.py  config.py  executor.py  facts.py  model.py  planner.py  renderers.py  schema.py
src/urd_installer/providers/: __init__.py  deployment.py  desktops.py  platforms.py  vnc.py
tests/: __init__.py  support.py  test_cli.py  test_config_schema.py  test_executor.py  test_facts.py  test_planner.py  test_providers.py  test_renderers.py  test_static_security.py
tests/fixtures/os-release/: alpine-3.20  fedora-41  ubuntu-24.04
versions/: lock.json
